changed directory names
changed directory names and also  shifted focus to EDA instead of PreProcessing.

--- a/Python/ML_LinReg/EDA/LinRegEDA.html
+++ b/Python/ML_LinReg/EDA/LinRegEDA.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>LinRegPreProcess</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>LinRegEDA</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7546,7 +7546,8 @@ a.anchor-link {
 </ul>
 <p><strong>Outcome:</strong><br/>
 Users gain actionable, defensible preprocessing guidance, (as a result of automated EDA), that scales to large or complex datasets, helping them build efficient pipelines without manually inspecting every feature.</p>
-<h2 id="Note:-The-architecture,-workflow,-and-functionality-of-this-project-are-entirely-my-own.-Generative-AI-was-used-for-some-coding-tasks,-like-formatting-and-debugging.-In-an-effort-to-modernize-my-approach-and-stay-current-with-emerging-technologies,-I-treat-AI-as-a-collaborative-partner-to-enhance-productivity-and-creativity,-while-all-key-decisions,-project-structure,-and-underlying-logic-remain-under-human-control.">Note: The architecture, workflow, and functionality of this project are entirely my own. Generative AI was used for some coding tasks, like formatting and debugging. In an effort to modernize my approach and stay current with emerging technologies, I treat AI as a collaborative partner to enhance productivity and creativity, while all key decisions, project structure, and underlying logic remain under human control.<a class="anchor-link" href="#Note:-The-architecture,-workflow,-and-functionality-of-this-project-are-entirely-my-own.-Generative-AI-was-used-for-some-coding-tasks,-like-formatting-and-debugging.-In-an-effort-to-modernize-my-approach-and-stay-current-with-emerging-technologies,-I-treat-AI-as-a-collaborative-partner-to-enhance-productivity-and-creativity,-while-all-key-decisions,-project-structure,-and-underlying-logic-remain-under-human-control.">¶</a></h2>
+<p>Note: The architecture, workflow, and functionality of this project are entirely my own. Generative AI was used for some coding tasks, like formatting and debugging. In an effort to modernize my approach and stay current with emerging technologies, I treat AI as a collaborative partner to enhance productivity and creativity, while all key decisions, project structure, and underlying logic remain under human control.</p>
+<hr/>
 </div>
 </div>
 </div>
